--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,18 +1,17 @@
+{# je fais appel a la fonction extends qui me permet d inserer le contenu venant de base.html.twig #}
 {% extends "base.html.twig" %}
+
+{# j'insere le block main qui permet de mettre du contenu dans le main de ma page home #}
+{# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans PageController.php #}
 {% block main %}
-
     <section class="boxBook">
-
         {% for book in books %}
-
             <div id="contentBook">
                 <h1 id="bookTitle">{{ book.title }}</h1>
                 <p id="bookAuthor">Ecrit par {{ book.author }}</p>
-                <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y')}}</p>
-                <a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}"></a>
+                <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y') }}</p>
+                <a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}"
+                                                                                alt="{{ book.title }}"></a>
             </div>
-
-        {% endfor %}
-    </section>
-
+        {% endfor %}</section>
 {% endblock main %}
