--- a/templates/_book.html.twig
+++ b/templates/_book.html.twig
@@ -4,6 +4,6 @@
         <h1 id="bookTitle">{{ book.title }}</h1>
         <p id="bookAuthor">Ecrit par {{ book.author }}</p>
         <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y') }}</p>
-        <img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}">
+{#        <img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}">#}
     </div>
 </section>
