--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -5,13 +5,13 @@
 {# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans PageController.php #}
 {% block main %}
     <section class="boxBook">
-        {% for book in books %}
+        {% for book in home %}
             <div id="contentBook">
                 <h1 id="bookTitle">{{ book.title }}</h1>
                 <p id="bookAuthor">Ecrit par {{ book.author }}</p>
                 <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y') }}</p>
                 <a class="lien" href="{{ path('book', {'id': book.id}) }}">
-                    <img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}">
+{#                    <img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}">#}
                 </a>
             </div>
         {% endfor %}
