--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,8 @@
 
             <li><a href="{{ path('books') }}">LISTE DES LIVRES</a></li>
 
+            <li><a href="{{ path('authors') }}">LES AUTEURS</a></li>
+
         </ul>
     </nav>
 
