--- a/templates/books.html.twig
+++ b/templates/books.html.twig
@@ -20,9 +20,13 @@
         {% for book in books %}
             <div id="contentBook">
                     <h1 id="bookTitle">{{ book.title }}</h1>
-                    <p id="bookAuthor">Ecrit par {{ book.author }}</p>
+                {% if book.author %}
+                    <p id="bookAuthor">Ecrit par {{ book.author.firstname }} {{ book.author.lastname }}</p>
+                {% endif %}
                     <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y')}}</p>
-{#                    <a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}"></a>#}
+                <a class="lien" href="{{ path('book', {'id': book.id}) }}">Voir ce livre</a>
+                <a class="lien" href="{{ path('book_delete', {'id': book.id}) }}">Supprimer ce livre</a>
+{#<a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}"></a>#}
             </div>
         {% endfor %}
     </section>
