--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,7 +8,9 @@
         {% for book in home %}
             <div id="contentBook">
                 <h1 id="bookTitle">{{ book.title }}</h1>
-                <p id="bookAuthor">Ecrit par {{ book.author }}</p>
+                {% if book.author %}
+                <p id="bookAuthor">Ecrit par {{ book.author.firstname }} {{ book.author.lastname }}</p>
+                {% endif %}
                 <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y') }}</p>
                 <a class="lien" href="{{ path('book', {'id': book.id}) }}">
 {#                    <img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}">#}
