--- a/templates/_book.html.twig
+++ b/templates/_book.html.twig
@@ -2,7 +2,9 @@
 <section class="boxBook">
     <div id="contentBook">
         <h1 id="bookTitle">{{ book.title }}</h1>
-        <p id="bookAuthor">Ecrit par {{ book.author }}</p>
+        {% if book.author %}
+            <p id="bookAuthor">Ecrit par {{ book.author.firstname }} {{ book.author.lastname }}</p>
+        {% endif %}
         <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y') }}</p>
 {#        <img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}">#}
     </div>
