--- a/templates/admin/book.html.twig
+++ b/templates/admin/book.html.twig
@@ -15,5 +15,5 @@
 {# j'insere le block main qui permet de mettre du contenu dans le main de ma page book   #}
 {% block main %}
  {# j'insere mon include de mon fichier _book.html.twig #}
-    {% include "_book.html.twig" %}
+    {% include "admin/_book.html.twig" %}
 {% endblock main %}
