--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
         <ul class="main-menu">
             <li><a href="{{ path('home') }}">ACCUEIL</a></li>
 
-            <li><a href="{{ path('books') }}">LISTE DES LIVRES</a></li>
+            <li><a href="{{ path('admin_books') }}">LISTE DES LIVRES</a></li>
 
             <li><a href="{{ path('authors') }}">LES AUTEURS</a></li>
 
@@ -40,7 +40,7 @@
             <ul class="footer-menu">
                 <li><a href="{{ path('home') }}">accueil</a></li>
 
-                <li><a href="{{ path('books') }}">liste des livres</a></li>
+                <li><a href="{{ path('admin_books') }}">liste des livres</a></li>
 
             </ul>
         </nav>
