--- a/templates/admin/books.html.twig
+++ b/templates/admin/books.html.twig
@@ -16,7 +16,9 @@
 {# j'insere le block main qui permet de mettre du contenu dans le main de ma page books   #}
 {# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans PageController.php   #}
 {% block main %}
+    <a class="lien" href="{{ path('admin_book_create') }}">Créer un livre</a>
     <section class="boxBook">
+
         {% for book in books %}
             <div id="contentBook">
                     <h1 id="bookTitle">{{ book.title }}</h1>
@@ -25,6 +27,7 @@
                 {% endif %}
                     <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y')}}</p>
                 <a class="lien" href="{{ path('admin_book', {'id': book.id}) }}">Voir ce livre</a>
+                <a class="lien" href="{{ path('admin_book_update', {'id': book.id}) }}">Mettre à jour</a>
                 <a class="lien" href="{{ path('admin_book_delete', {'id': book.id}) }}">Supprimer ce livre</a>
 {#<a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}"></a>#}
             </div>
