create&update author

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
 
             <li><a href="{{ path('admin_books') }}">LISTE DES LIVRES</a></li>
 
-            <li><a href="{{ path('authors') }}">LES AUTEURS</a></li>
+            <li><a href="{{ path('admin_authors') }}">LES AUTEURS</a></li>
 
         </ul>
     </nav>
