--- a/templates/admin/authors.html.twig
+++ b/templates/admin/authors.html.twig
@@ -16,15 +16,18 @@
 {# j'insere le block main qui permet de mettre du contenu dans le main de ma page books   #}
 {# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans PageController.php   #}
 {% block main %}
+    <a class="lien" href="{{ path('admin_author_create') }}">Ajouter un auteur</a>
     <section class="boxBook">
         {% for author in authors %}
             <div id="contentBook">
                     <h1 id="bookTitle">Auteur</h1>
-                    <p id="bookAuthor"><a class="lien" href="{{ path('author', {'id': author.id}) }}">{{ author.lastname }} {{ author.firstname }}</a></p>
+                    <p id="bookAuthor"><a class="lien" href="{{ path('admin_author', {'id': author.id}) }}">{{ author.lastname }} {{ author.firstname }}</a></p>
                 {% if author.deathdate %}
                     <p id="bookPublish">Décédé le {{ author.deathdate | date('d/m/Y')}}</p>
                 {% endif %}
-
+                <a class="lien" href="{{ path('admin_author', {'id': author.id}) }}">Voir cet auteur</a>
+                <a class="lien" href="{{ path('admin_author_update', {'id': author.id}) }}">Mettre à jour</a>
+                <a class="lien" href="{{ path('admin_author_delete', {'id': author.id}) }}">Supprimer cet auteur</a>
 {#                    <a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}"></a>#}
             </div>
         {% endfor %}
