--- a/templates/admin/book_create.html.twig
+++ b/templates/admin/book_create.html.twig
@@ -1,7 +1,24 @@
 {% extends 'base.html.twig' %}
-
+{% block css %}
+        {{ parent() }} <link href="{{ asset('css/form.css') }}" type="text/css" rel="stylesheet">
+{% endblock css %}
 {% block main %}
 
-{# j'insere mon formulaire bookForm#}
-{{ form(bookForm) }}
+
+
+        {{ form_start(bookForm) }}
+
+        {{ form_label(bookForm.title) }}
+        {{ form_widget(bookForm.title) }}
+
+        {{ form_label(bookForm.nbPages) }}
+        {{ form_widget(bookForm.nbPages) }}
+
+        {{ form_label(bookForm.publishedAt) }}
+        {{ form_widget(bookForm.publishedAt) }}
+
+        {{ form_rest(bookForm) }}
+        <button type="submit">Valider</button>
+        {{ form_end(bookForm) }}
+
 {% endblock %}
