--- a/templates/admin/book_create.html.twig
+++ b/templates/admin/book_create.html.twig
@@ -1,24 +1,14 @@
 {% extends 'base.html.twig' %}
 {% block css %}
-        {{ parent() }} <link href="{{ asset('css/form.css') }}" type="text/css" rel="stylesheet">
+    {{ parent() }}
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
 {% endblock css %}
 {% block main %}
 
-
-
-        {{ form_start(bookForm) }}
-
-        {{ form_label(bookForm.title) }}
-        {{ form_widget(bookForm.title) }}
-
-        {{ form_label(bookForm.nbPages) }}
-        {{ form_widget(bookForm.nbPages) }}
-
-        {{ form_label(bookForm.publishedAt) }}
-        {{ form_widget(bookForm.publishedAt) }}
-
-        {{ form_rest(bookForm) }}
-        <button type="submit">Valider</button>
-        {{ form_end(bookForm) }}
-
+    {% include "admin/_book_form.html.twig" %}
 {% endblock %}
