--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,8 +1,8 @@
 {# je fais appel a la fonction extends qui me permet d inserer le contenu venant de base.html.twig #}
-{% extends "base.html.twig" %}
+{% extends "admin/base.html.twig" %}
 
 {# j'insere le block main qui permet de mettre du contenu dans le main de ma page home #}
-{# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans PageController.php #}
+{# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans GuestPageController.php #}
 {% block main %}
     <section class="boxBook">
         {% for book in home %}
