--- a/templates/guest/authors.html.twig
+++ b/templates/guest/authors.html.twig
@@ -1,5 +1,5 @@
 {#je fais appel a la fonction extends qui me permet d inserer le contenu venant de base.html.twig#}
-{% extends "admin/base.html.twig" %}
+{% extends "guest/base.html.twig" %}
 
 {# j'insere le block metatitle mais fait appel a la place du metatitle par defaut le metatitle "Vos livres"   #}
 {% block metatitle %}
@@ -16,18 +16,17 @@
 {# j'insere le block main qui permet de mettre du contenu dans le main de ma page books   #}
 {# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans GuestPageController.php   #}
 {% block main %}
-    <a class="lien" href="{{ path('admin_author_create') }}">Ajouter un auteur</a>
+
     <section class="boxBook">
         {% for author in authors %}
             <div id="contentBook">
                     <h1 id="bookTitle">Auteur</h1>
-                    <p id="bookAuthor"><a class="lien" href="{{ path('admin_author', {'id': author.id}) }}">{{ author.lastname }} {{ author.firstname }}</a></p>
+                    <p id="bookAuthor"><a class="lien" href="{{ path('guest_author', {'id': author.id}) }}">{{ author.lastname }} {{ author.firstname }}</a></p>
                 {% if author.deathdate %}
                     <p id="bookPublish">Décédé le {{ author.deathdate | date('d/m/Y')}}</p>
                 {% endif %}
-                <a class="lien" href="{{ path('admin_author', {'id': author.id}) }}">Voir cet auteur</a>
-                <a class="lien" href="{{ path('admin_author_update', {'id': author.id}) }}">Mettre à jour</a>
-                <a class="lien" href="{{ path('admin_author_delete', {'id': author.id}) }}">Supprimer cet auteur</a>
+                <a class="lien" href="{{ path('guest_author', {'id': author.id}) }}">Voir cet auteur</a>
+
 {#                    <a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}"></a>#}
             </div>
         {% endfor %}
