--- a/templates/guest/books.html.twig
+++ b/templates/guest/books.html.twig
@@ -1,9 +1,9 @@
 {#je fais appel a la fonction extends qui me permet d inserer le contenu venant de base.html.twig#}
-{% extends "admin/base.html.twig" %}
+{% extends "guest/base.html.twig" %}
 
 {# j'insere le block metatitle mais fait appel a la place du metatitle par defaut le metatitle "Vos livres"   #}
 {% block metatitle %}
-    Votre recherche
+    Vos livres
 {% endblock metatitle %}
 
 {# j'insere le block css et fait appel au css parent plus le book.css #}
@@ -16,21 +16,19 @@
 {# j'insere le block main qui permet de mettre du contenu dans le main de ma page books   #}
 {# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans GuestPageController.php   #}
 {% block main %}
-    <h2 class="searchTitle">Votre recherche</h2>
-<div class="boxBook">
+
+    <section class="boxBook">
+
         {% for book in books %}
             <div id="contentBook">
-                <h1 id="bookTitle">{{ book.title }}</h1>
+                    <h1 id="bookTitle">{{ book.title }}</h1>
                 {% if book.author %}
                     <p id="bookAuthor">Ecrit par {{ book.author.firstname }} {{ book.author.lastname }}</p>
                 {% endif %}
-                <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y')}}</p>
-                <a class="lien1" href="{{ path('admin_book', {'id': book.id}) }}">Voir ce livre</a>
-                <a class="lien2" href="{{ path('admin_book_update', {'id': book.id}) }}">Mettre à jour</a>
-                <a class="lien3" href="{{ path('admin_book_delete', {'id': book.id}) }}">Supprimer ce livre</a>
-                {#<a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}"></a>#}
+                    <p id="bookPublish">Publié le {{ book.publishedAt | date('d/m/y')}}</p>
+                <a class="lien1" href="{{ path('guest_book', {'id': book.id}) }}">Voir ce livre</a>
+{#<a class="lien" href="{{ path('book', {'id': book.id}) }}"><img id="bookImg" src="{{ book.image }}" alt="{{ book.title }}"></a>#}
             </div>
         {% endfor %}
-</div>
     </section>
 {% endblock main %}
