--- a/templates/admin/book.html.twig
+++ b/templates/admin/book.html.twig
@@ -1,5 +1,5 @@
 {#je fais appel a la fonction extends qui me permet d inserer le contenu venant de base.html.twig#}
-{% extends "base.html.twig" %}
+{% extends "admin/base.html.twig" %}
 
 {# j'insere le block metatitle mais fait appel a la place du metatitle par defaut le metatitle "Votre livre"   #}
 {% block metatitle %}
