--- a/templates/admin/books.html.twig
+++ b/templates/admin/books.html.twig
@@ -1,5 +1,5 @@
 {#je fais appel a la fonction extends qui me permet d inserer le contenu venant de base.html.twig#}
-{% extends "base.html.twig" %}
+{% extends "admin/base.html.twig" %}
 
 {# j'insere le block metatitle mais fait appel a la place du metatitle par defaut le metatitle "Vos livres"   #}
 {% block metatitle %}
@@ -14,7 +14,7 @@
 
 
 {# j'insere le block main qui permet de mettre du contenu dans le main de ma page books   #}
-{# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans PageController.php   #}
+{# dans ce block la boucle for va permettre d'afficher tout le contenu du $array selectionné dans GuestPageController.php   #}
 {% block main %}
     <a class="lien" href="{{ path('admin_book_create') }}">Créer un livre</a>
     <section class="boxBook">
