--- a/templates/guest/book.html.twig
+++ b/templates/guest/book.html.twig
@@ -1,9 +1,9 @@
 {#je fais appel a la fonction extends qui me permet d inserer le contenu venant de base.html.twig#}
-{% extends "admin/base.html.twig" %}
+{% extends "guest/base.html.twig" %}
 
 {# j'insere le block metatitle mais fait appel a la place du metatitle par defaut le metatitle "Votre livre"   #}
 {% block metatitle %}
-    Auteurs
+    Votre livre
 {% endblock metatitle %}
 
 {# j'insere le block css et fait appel au css parent plus le book.css #}
@@ -15,5 +15,5 @@
 {# j'insere le block main qui permet de mettre du contenu dans le main de ma page book   #}
 {% block main %}
  {# j'insere mon include de mon fichier _book.html.twig #}
-    {% include "admin/_author.html.twig" %}
+    {% include "guest/_book.html.twig" %}
 {% endblock main %}
